name:                star-chart
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/star-chart#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable star-chart
  hs-source-dirs:      src
  main-is:             Stars.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-svg
                     , diagrams-lib
                     , parsec
                     , parsec3-numbers
                     , parallel
  ghc-options: -main-is Stars
  other-modules:
    Location,
    Luminous,
    Projections,
    Stars.Parser,
    Stars.StarDiagram,
    Stars.Types
